--- a/src/app/admin/components/add-product/add-product.component.html
+++ b/src/app/admin/components/add-product/add-product.component.html
@@ -2,6 +2,9 @@
     <div class="alert alert-danger" role="alert" *ngIf="errorMessage" (click)="errorMessage = null">
         {{ errorMessage }}
     </div>
+    <div class="alert alert-success" role="alert" *ngIf="successMessage" (click)="successMessage = null">
+        <pre style="margin:0; white-space:pre-wrap;">{{ successMessage }}</pre>
+    </div>
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-4">
@@ -55,9 +58,12 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <button type="submit" style="background-color: #48e3cc; color: #000;" class="btn btn-primary">Add</button>
+                                        <button type="submit" style="background-color: #48e3cc; color: #000;" class="btn btn-primary">Add</button>
+                                        <button type="button" class="btn btn-secondary ms-2" (click)="bulkModalOpen = true">Bulk Add/Update</button>
                 </div>
             </div>
         </div>
     </div>
 </form>
+<!-- Bulk upload modal component -->
+<app-bulk-upload-modal *ngIf="bulkModalOpen" (closed)="bulkModalOpen = false" (result)="onBulkResult($event)"></app-bulk-upload-modal>
