--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -23,7 +23,8 @@
             <label for="inputEmail" class="form-label">Email:</label>
             <input type="email" class="form-control" id="inputEmail" formControlName="email">
             <div *ngIf="validateForm.get('email')?.hasError('required') && validateForm.get('email')?.touched" class="text-danger">Email is required.</div>
-            <div *ngIf="validateForm.get('email')?.hasError('email') && validateForm.get('email')?.touched" class="text-danger">Invalid email format.</div>
+            <div *ngIf="validateForm.get('email')?.hasError('pattern') && validateForm.get('email')?.touched"
+              class="text-danger">Invalid email format.</div>
           </div>
           <div class="mb-1">
             <label for="inputPassword" class="form-label">Password:</label>
