--- a/src/app/user/components/bills/bills.component.css
+++ b/src/app/user/components/bills/bills.component.css
@@ -1,3 +1,20 @@
+.message{
+    text-align: center;
+    margin-top: 150px;
+}
+
+.message p{
+    font-size: 18px;
+    color: #666;
+    margin-bottom: 30px;
+}
+
+.message h2 {
+    font-size: 30px;
+    color: #888;
+    margin-bottom: 20px;
+}
+
 .bills {
     list-style: none;
     padding: 10px;
