--- a/src/app/user/components/bill-preview/bill-preview.component.html
+++ b/src/app/user/components/bill-preview/bill-preview.component.html
@@ -5,7 +5,7 @@
     </div>  
     <div class="row">
         <div class="col logo-col">
-            <img src="../../../../assets/images/GST_Logo_1.jpg" alt="GST_Logo"/>
+            <img src="../../../../assets/images/WhatsApp Image 2025-12-07 at 01.05.59.jpeg" alt="GST_Logo"/>
         </div>
         <div class="col" style="width: 50%;">
             <table class="details">
